fixed column gap

--- a/src/routes/individual-doctor/individual-doctor.styles.scss
+++ b/src/routes/individual-doctor/individual-doctor.styles.scss
@@ -119,7 +119,7 @@
 
 .indv-fourth-row {
   padding-top: 2rem;
-  column-gap: 5%;
+  column-gap: 1rem;
 }
 
 .indv-doctor-info-subrow {
@@ -202,7 +202,6 @@
   .indv-fourth-row {
     justify-content: normal;
     flex-wrap: wrap;
-    column-gap: 2%;
   }
 
   .indv-follow-button,
@@ -250,7 +249,6 @@
   .indv-fourth-row {
     justify-content: normal;
     flex-wrap: wrap;
-    column-gap: 2%;
   }
 }
 
